# candlestick-screener

./: .gitignore  README.md  app.py  main.py  patterns.py  pyproject.toml  requirements.txt  utils.py
datasets/: sp500_companies.csv
datasets/companies/: dax.csv  ftse100.csv  nasdaq100.csv  sp500.csv
src/: app.py  utils.py
src/config/: indices.py  patterns.py
src/templates/: index.html
templates/: index.html
